@@ -1,3 +1,10 @@
+1999-05-25  Linus Nordberg  <linus@swox.se>
+
+	* mpn/generic/rawrandom.c (mpn_rawrandom): Don't calculate nlimbs
+	twice.
+
+	* gmp.h (__gmp_rand_dist): Remove.
+
 1999-05-24  Linus Nordberg  <linus@swox.se>
 
 	* mpn/generic/rawrandom.c: Clean up comments.
